    signal handlers.
  * Update mythbuntu-services for changes in ubi-usersetup.

  [ Evan Dandrea ]
  * Consider a failure to set up the user-setup page to be a fatal
    error.
  * Add some missing imports and variables to the user-setup page.
  * Add oem-config/install-language-support, which installs the
    respective language support packages for the locale selected by the
    user.

  [ Roman Shtylman ]
  * Fix for (LP: #522502)

 -- Roman Shtylman <shtylman@gmail.com>  Tue, 16 Feb 2010 23:00:15 -0500

ubiquity (2.1.20) lucid; urgency=low

  * Convert migrationassistant, partman, summary, and usersetup to
    plugins.
  * Do not fullscreen the installer window when in only-ubiquity mode,
    so users can see the pretty background and window decorations.
  * Fix function arguments in ubiquity-dm (LP: #521702).
  * Add python-rsvg dependency for the new greeter.

 -- Evan Dandrea <evand@ubuntu.com>  Mon, 15 Feb 2010 15:33:38 +0000

ubiquity (2.1.19) lucid; urgency=low

  * Automatic update of included source packages: clock-setup 0.102ubuntu1,
    debian-installer-utils 1.72ubuntu4.

 -- Colin Watson <cjwatson@ubuntu.com>  Sun, 14 Feb 2010 02:40:38 +0000

ubiquity (2.1.18) lucid; urgency=low

  * Preliminary version of a new greeter, accessible using the
    'maybe-ubiquity' boot option.  In this mode, ubiquity-dm displays a
    choice between "Try Ubuntu without installing" and "Install Ubuntu"
    after starting X, rather than needing to present that choice at the boot
    loader.  This is not ready for production use yet and (desperately!)
    needs artwork, but merging it here will make it easier to test.  Thanks
    to Cody Russell for the first version of the greeter code.
  * Thaw choose_partition choices on partman startup.
  * Always use use_as method to get method choices rather than going through
    slower partman scripts.  (We were already doing this in some fast
    paths.)